--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
 
         </activity>
 
+        <activity android:name=".OpenShift">
+
+        </activity>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
