Create NewOrderActivity and new_order_layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
 
         </activity>
 
+        <activity android:name=".NewOrderActivity">
+
+        </activity>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
