--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.9.2@aar') {
         transitive = true
     }
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
+    //compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
 }
