--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
 
         </activity>
 
+        <activity android:name=".ApplicationPartActivity"></activity>
+
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
