--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         </activity>
 
         <activity android:name=".ApplicationPartActivity"></activity>
+        <activity android:name=".NewCoffeeActivity"></activity>
 
     </application>
 
