--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     //compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.getbase:floatingactionbutton:1.10.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
 }
