--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
 
         <activity android:name=".ApplicationPartActivity"></activity>
         <activity android:name=".NewCoffeeActivity"></activity>
+        <activity android:name=".EditDrinkActivity"></activity>
 
     </application>
 
